[package]
name = "bevy_queue_delete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ref_delete = [
    "dep:crossbeam-channel",
    "dep:parking_lot",
]

[dependencies]
bevy = {version = "0.7.0", default-features = false}
crossbeam-channel = {version = "0.5.4", optional = true}
parking_lot = {version = "0.12.0", optional = true}